FileUtils readFiles will now throw IOEception