@@ -5,12 +5,11 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 
 public class FileUtils {
-    public static String readFile(String path) {
-        try {
-            return Files.readString(Path.of(path));
-        } catch (IOException e) {
-            System.err.println(e);
-            return "";
-        }
+    public static String readFile(String path) throws IOException {
+        return Files.readString(Path.of(path));
+    }
+
+    public static byte[] readBinaryFile(String path) throws IOException {
+        return Files.readAllBytes(Path.of(path));
     }
 }
